--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,8 @@
     <string name="mshow_net_timeout">网络不太给力哦，一会再试试~</string>
     <string name="mshow_data_exception">数据加载异常，请稍后重试</string>
     <string name="title_activity_show">ShowActivity</string>
+    <string name="str_tab_home">首页</string>
+  <string name="str_tab_guangchang">广场</string>
+  <string name="str_tab_msg">信息</string>
+  <string name="str_tab_my">我的</string>
 </resources>
