--- a/tuya/android/project/trunk/app/src/main/res/values/strings.xml
+++ b/tuya/android/project/trunk/app/src/main/res/values/strings.xml
@@ -14,17 +14,20 @@
     <string name="menu_settings">Settings</string>
 
 
-    <string name="mshow_loading">内容获取中...</string>
-    <string name="mshow_loading_present">一大波礼物正在向您靠近...</string>
-    <string name="mshow_loading_text">失败乃成功之母，刷新再试试</string>
-    <string name="mshow_network_error">加载失败， 点击这里重新试试</string>
-    <string name="mshow_content_empty">内容暂时为空，敬请等待~</string>
-    <string name="mshow_no_net">哎呀，手机好像是没连上网~</string>
-    <string name="mshow_net_timeout">网络不太给力哦，一会再试试~</string>
-    <string name="mshow_data_exception">数据加载异常，请稍后重试</string>
     <string name="title_activity_show">ShowActivity</string>
     <string name="str_tab_home">首页</string>
-  <string name="str_tab_guangchang">广场</string>
-  <string name="str_tab_msg">信息</string>
-  <string name="str_tab_my">我的</string>
+    <string name="str_tab_guangchang">广场</string>
+    <string name="str_tab_msg">信息</string>
+    <string name="str_tab_my">我的</string>
+
+
+    <string name="sticker_loading">内容获取中...</string>
+    <string name="sticker_loading_present">一大波礼物正在向您靠近...</string>
+    <string name="sticker_loading_text">失败乃成功之母，刷新再试试</string>
+    <string name="sticker_network_error">加载失败， 点击这里重新试试</string>
+    <string name="sticker_content_empty">内容暂时为空，敬请等待~</string>
+    <string name="sticker_no_net">哎呀，手机好像是没连上网~</string>
+    <string name="sticker_net_timeout">网络不太给力哦，一会再试试~</string>
+    <string name="sticker_data_exception">数据加载异常，请稍后重试</string>
+
 </resources>
