--- a/tuya/android/project/trunk/app/src/main/res/values/strings.xml
+++ b/tuya/android/project/trunk/app/src/main/res/values/strings.xml
@@ -29,5 +29,12 @@
     <string name="sticker_no_net">哎呀，手机好像是没连上网~</string>
     <string name="sticker_net_timeout">网络不太给力哦，一会再试试~</string>
     <string name="sticker_data_exception">数据加载异常，请稍后重试</string>
+  <string name="str_wlj">无滤镜</string>
+  <string name="str_edit_photo">编辑相片</string>
+  <string name="str_back">返回</string>
+  <string name="str_next">下一步</string>
+  <string name="str_sticker">贴纸</string>
+  <string name="str_lvjing">滤镜</string>
+  <string name="str_tag">标签</string>
 
 </resources>
