--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,8 @@
   <string name="str_done">完成</string>
   <string name="str_input_code">输入验证码</string>
   <string name="str_get_code">获取验证码</string>
+  <string name="str_zan">赞</string>
+  <string name="str_focus">关注</string>
+  <string name="str_fans">粉丝</string>
 
 </resources>
