1.去掉了中间那个活动预留页 2.调整了首页内容 3.去掉了分类页，加入了关于个人相关的各种帖子列表

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,5 +45,8 @@
   <string name="str_focus">关注</string>
   <string name="str_fans">粉丝</string>
   <string name="str_topic_content_hint">点我编辑帖子内容</string>
+  <string name="str_app_title">Allstar</string>
+  <string name="str_dongtai">动态</string>
+  <string name="str_my_title">我的</string>
 
 </resources>
